--- a/shadowstar_webapp/template/index.html
+++ b/shadowstar_webapp/template/index.html
@@ -209,7 +209,7 @@
     </div>
 </body>
 <script>
-    const API_BASE = '%API_BASE%';
+	const API_BASE = '%API_BASE%';
     let table = null;
     let rawCSV = "";
     let rows = [];
@@ -350,7 +350,7 @@
                 parts[i] = parts[i].split('/')[0];
             ret[0] += (Math.abs(Number(parts[i])) * Math.pow(2,24-(8*i))); 
         }
-        ret = ret.concat(row);
+        ret = ret.concat([...row]);
         return ret;
     }
 
@@ -379,11 +379,14 @@
     }
 
     function ip_to_int(row) {
-        if (/\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3}\//.exec(row[0])) {
-            return ipv4_to_int(row);
-        } else {
-            return ipv6_to_int(row);
-        }
+		if (row && row[0]) {
+			if (/\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3}\//.exec(row[0])) {
+				return ipv4_to_int(row);
+			} else {
+				return ipv6_to_int(row);
+			}
+		}
+		return NaN;
     }
 
     function mask_to_span(start, mask) {
@@ -395,6 +398,13 @@
         return Math.pow(2, 32-mask);
     }
 
+	function get_mask(block) {
+		if (block[1].indexOf('/') !== -1) {
+			return Number(block[1].split('/')[1]);
+		}
+		return NaN;
+	}
+
     function cidr_reduce(rows) {
         const seen_values = new Set();
         const cidr_blocks = [];
@@ -403,6 +413,7 @@
 
         for (let i = 1; i < rows.length; i++) {
             if (rows[i] === undefined || rows[i][0] === undefined || rows[i][0].match === undefined) {
+				console.log('Bad row:', rows[i]);
                 continue;
             }
             // Cheap IPv4 regex
@@ -425,7 +436,18 @@
             }
         }
 
-        const cidr_int_blocks = cidr_blocks.map((e) => ip_to_int(e)).sort((a,b) => a[0]-b[0]);
+		let cidr_int_blocks = [];
+		for (let i = 0; i < cidr_blocks.length; i++) {
+			const t = ip_to_int(cidr_blocks[i]);
+			if (isNaN(t[0])) {
+				ret.push(t.splice(1));
+				continue;
+			}
+			cidr_int_blocks.push(t);
+		}
+
+		cidr_int_blocks.sort((a,b) => a[0]-b[0]);
+
         for (let i = 0; i < cidr_blocks.length; i++) {
             if (cidr_blocks[i][0].indexOf('/') !== -1) {
                 const mask = Number(/\d+/.exec(cidr_blocks[i][0].split('/')[1])[0]);
@@ -434,17 +456,16 @@
                     masks[block[0]] = mask;
             }
         }
-        
+
         let idx = 0;
         let start_idx = 0;
 
-        while (isNaN(cidr_int_blocks[start_idx][0])) {
-            ret.push(cidr_int_blocks[start_idx].splice(1));
-            start_idx += 1;
-        }
-
         let start = cidr_int_blocks[start_idx][0];
         let span = mask_to_span(start, masks[start]);
+
+		while (get_mask(cidr_int_blocks[start_idx]) != masks[start]) {
+			start_idx += 1;
+		}
 
         while (idx < cidr_int_blocks.length-1) {
             idx += 1;
@@ -452,9 +473,14 @@
                 ret.push(cidr_int_blocks[start_idx].splice(1));
                 if (idx < cidr_int_blocks.length) {
                     start_idx = idx;
-                    start = cidr_int_blocks[idx][0];
+                    start = cidr_int_blocks[start_idx][0];
                     span = mask_to_span(start, masks[start]);
+                    while (get_mask(cidr_int_blocks[start_idx]) != masks[start]) {
+                        start_idx += 1;
+                    }
                 }
+            } else {
+                console.log('Removing block:', cidr_int_blocks[idx]);
             }
         }
 
